# LayerLumos

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml  static.yml
docs/: API_Documentation.md  conf.py  examples.rst  getting-started.md  index.md  index.rst  modules.rst
docs/_auto/: index.html  utils.html
docs/api/: layerlumos.html
docs/examples/: RF_example.ipynb  RF_example.py  angle_example.ipynb  compare_res_lumerical.py  simple_example.ipynb
examples/: Microgrid_TRA.ipynb  RF_example.py  angle_example.py  compare_res_lumerical.py  simple_example.py  time_compare_lumerical.py
layerlumos/: __init__.py  layerlumos.py  materials.json  profile_output.pstats  utils.py  utils_materials.py  utils_spectra.py
src/: angle_example.py  layerlumos.py  materials.json  simple_example.py  test_lumerical.py  time_compare_lumerical.py  utils.py
src/materials/: SiO2_Kischkat.csv
tests/: test_RF.py  test_angle.py  test_import.py  test_lumerical.py  test_materials.py  test_radio_frequency.py  test_stackrt.py  test_stactrt.py  test_version.py
