[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[tool.setuptools]
packages = ["layerlumos"]

[project]
name = "layerlumos"
version = "0.1.0"
authors = [
    {name = "Mingxuan Li", email = "mil152@pitt.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = ""
Source = ""

[project.optional-dependencies]
dev = [
    "pytest",
    "wheel",
    "build",
    "twine",
]
